--- a/src/components/Expense/ExpenseList/styles.module.css
+++ b/src/components/Expense/ExpenseList/styles.module.css
@@ -4,6 +4,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 16px;
+    /* padding: 16px; */
     gap: 8px;
 }
