--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -7,3 +7,10 @@
 ul, ol {
     list-style: none;
 }
+
+h1, h2, h3, h4, h5, h6 {
+    font-size: 100%;
+    font-weight: normal;
+    padding: 0;
+    margin: 0;
+}
